handle list product
